fixed-scrollbar-color

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -109,6 +109,6 @@ html {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: var(--desig);
+  background: var(--design);
   border-radius: 10px;
 }
